invalid_tests/keywords/test1.go
// Test 1: Using keyword as identifier
func main() {
    func := 10
}
